[tool.poetry]
name = "LIMBR"
version = "0.3.0"
description = "Learning and Imputation for Mass-spec Bias Reduction"
authors = ["Alec Crowell <alexander.m.crowell@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/aleccrowell/LIMBR"
repository = "https://github.com/aleccrowell/LIMBR"
keywords = ["SVA", "SVD", "mass-spec", "bioinformatics"]
packages = [{include = "LIMBR"}]

[tool.poetry.dependencies]
python = ">=3.11"
numpy = "^2.4"
pandas = "^3.0"
scipy = "^1.17"
scikit-learn = "^1.8"
statsmodels = "^0.14"
tqdm = "^4.67"
multiprocess = "^0.70"
matplotlib = "^3.10"
pyarrow = ">=23.0.1,<25.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
